<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather Forecast</string>

    <string name="str_settings">Settings</string>
    <string name="str_location">Location</string>
    <string name="str_weather_now">Now</string>
    <string name="str_weather_forecast">Forecast</string>
    <string name="language">App language</string>

    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="ukrainian" translatable="false">Українська</string>

    <string name="str_location_full">%1$s, %2$s, %3$s</string>
    <string name="str_location_city_country">%1$s, %2$s</string>
    <string name="str_location_search_hint">e.g. Paris, France</string>
    <string name="str_current_location">Current location</string>
    <string name="str_undefined_location">No current location available. Set up your location</string>
    <string name="str_search_location">Search location</string>
    <string name="str_location_name">%1$s, %2$s</string>
    <string name="str_nothing_found">No cities found :(</string>
    <string name="str_search_hint_tv">Please enter a\u00A0city and a\u00A0country (or a\u00A0country code, e.g.\u00A0\'FR\') separated by a\u00A0comma</string>
    <string name="str_detecting_location">Detecting location…</string>
    <string name="str_detect_location_success">Location has been detected successfully</string>
    <string name="str_detect_location_failure">Failed to detect location. Make sure your device\'s location is turned on</string>
    <string name="str_location_no_internet">Search failed. Please check your internet connection and try again</string>

    <string name="str_temp_celsius">%d\u00B0C</string>
    <string name="str_feels_like_celsius">Feels Like %d\u00B0C</string>
    <string name="str_temp_fahrenheit">%d\u00B0F</string>
    <string name="str_feels_like_fahrenheit">Feels Like %d\u00B0F</string>

    <string name="str_cloudiness_value">%d%%</string>
    <string name="str_humidity_value">%d%%</string>
    <string name="str_precipitation_value_mm">%.1f mm/h</string>
    <string name="str_precipitation_value_in">%.2f in/h</string>
    <string name="str_pressure_value_mm">%.0f mm Hg</string>
    <string name="str_pressure_value_in">%.2f in Hg</string>
    <string name="str_wind_speed_value_ms">%.1f m/s</string>
    <string name="str_wind_speed_value_kph">%.1f km/h</string>
    <string name="str_wind_speed_value_mph">%.1f mph</string>

    <string name="str_settings_units">Measurement units</string>
    <string name="str_settings_temp">Temperature</string>
    <string name="str_settings_pressure">Atmospheric pressure</string>
    <string name="str_settings_precipitation">Precipitation</string>
    <string name="str_settings_wind_speed">Wind speed</string>
    <string name="str_settings_celsius">Celsius (\u00B0C)</string>
    <string name="str_settings_fahrenheit">Fahrenheit (\u00B0F)</string>
    <string name="str_settings_mmhg">Millimeters of mercury (mm Hg)</string>
    <string name="str_settings_inhg">Inches of mercury (in Hg)</string>
    <string name="str_bottom_sheet_mmhg">Millimeters of mercury (mm Hg)</string>
    <string name="str_bottom_sheet_inhg">Inches of mercury (in Hg)</string>
    <string name="str_settings_mmh">Millimeters per hour (mm/h)</string>
    <string name="str_settings_inh">Inches per hour (in/h)</string>
    <string name="str_settings_ms">Meters per second (m/s)</string>
    <string name="str_settings_kmh">Kilometers per hour (km/h)</string>
    <string name="str_settings_mph">Miles per hour (mph)</string>

    <string name="str_rate_share">Rate &amp; Share</string>
    <string name="str_rate">5-star rating</string>
    <string name="str_rate_desc">Please rate the app with 5 stars if you like it. Easy for you, very helpful for us</string>
    <string name="str_share">Share</string>
    <string name="str_share_desc">Please share the app with your friends to make the app even better</string>
    <string name="str_app_name_version">Weather Forecast v1.3</string>

    <string name="str_hourly_forecast">Hourly forecast</string>
    <string name="str_humidity">Humidity</string>
    <string name="str_cloudiness">Cloudiness</string>
    <string name="str_precipitation">Precipitation</string>
    <string name="str_pressure">Pressure</string>
    <string name="str_wind_speed">Wind Speed</string>
    <string name="str_wind_gust">Wind Gusts</string>
    <string name="str_wind_dir">Wind Direction</string>
    <string name="str_uvi">UV index</string>

    <string name="str_daily_forecast">Daily forecast</string>
    <string name="str_sunrise">Sunrise</string>
    <string name="str_sunset">Sunset</string>

    <string name="str_close_bottom_sheet">Cancel</string>

    <string name="str_earth_desc">This is just a picture of the planet Earth</string>
    <string name="str_detect_loc_desc">Detect your location automatically</string>
    <string name="str_ic_search_desc">Press to input your location</string>
    <string name="str_ic_clear_desc">Clear location edit text</string>
    <string name="str_ic_cancel_desc">Cancel current search</string>
    <string name="str_divider_desc">Just a divider</string>
    <string name="str_weather_ic_desc">This is an image showing the weather condition</string>
    <string name="str_humidity_ic_desc">Humidity parameter</string>
    <string name="str_cloudiness_ic_desc">Cloudiness parameter</string>
    <string name="str_precipitation_ic_desc">Precipitation parameter</string>
    <string name="str_pressure_ic_desc">Pressure parameter</string>
    <string name="str_wind_speed_ic_desc">Wind speed parameter</string>
    <string name="str_wind_gust_ic_desc">Wind gusts parameter</string>
    <string name="str_wind_dir_ic_desc">Wind direction parameter</string>
    <string name="str_uvi_ic_desc">Ultraviolet index parameter</string>
    <string name="str_sunrise_ic_desc">Sunrise time</string>
    <string name="str_sunset_ic_desc">Sunset time</string>
    <string name="str_location_city_desc">Here will be the list of the locations</string>
    <string name="str_temp_unit_desc">Choose temperature measurement unit</string>
    <string name="str_pressure_unit_desc">Choose pressure measurement unit</string>
    <string name="str_speed_unit_desc">Choose wind speed measurement unit</string>
    <string name="str_precipitation_unit_desc">Choose precipitation measurement unit</string>

    <string name="str_retry">Retry</string>

    <string name="str_north">N</string>
    <string name="str_south">S</string>
    <string name="str_west">W</string>
    <string name="str_east">E</string>
    <string name="str_northeast">NE</string>
    <string name="str_northwest">NW</string>
    <string name="str_southwest">SW</string>
    <string name="str_southeast">SE</string>

    <string name="str_loc_permission_denied">Location permission denied. Select a\u00A0location manually in the\u00A0\"Location\" menu</string>
    <string name="str_loc_cant_find">Couldn\'t find your location. Select a\u00A0location manually in the\u00A0\"Location\" menu</string>
    <string name="str_loc_permission_denied_settings">Location permission denied. To detect location grant location permission in the settings</string>
    <string name="str_no_internet_message">Couldn\'t refresh the forecast. Please check your internet connection and try again</string>
    <string name="str_no_internet_error">Error! Please check your internet connection and try again</string>

    <string name="str_tools_city">Indianapolis</string>
    <string name="str_tools_timezone">UTC+3:30</string>
    <string name="str_tools_date">Wednesday, Sept. 28</string>
    <string name="str_tools_time">9:41 PM</string>
    <string name="str_tools_hour">9 AM</string>
    <string name="str_tools_date_hour_forecast">Sept. 28</string>
    <string name="str_tools_zone_date">Wednesday, 31st</string>
    <string name="str_tools_weather_condition">Thunderstorm with heavy drizzle</string>
    <string name="str_tools_weather_cond_main">Rain</string>
    <string name="str_tools_temperature">25\u00B0C</string>
    <string name="str_tools_feels_like">Feels Like 23\u00B0C</string>
    <string name="str_tools_item_loc_city_country">Lviv, Ukraine</string>
    <string name="str_tools_item_loc_state">Lviv Oblast</string>
    <string name="str_tools_location_name">Odesa, Ukraine</string>
    <string name="str_tools_humidity_value">100%</string>
    <string name="str_tools_cloudiness_value">0%</string>
    <string name="str_tools_precipitation_value">15 mm</string>
    <string name="str_tools_pressure_value">750 mmHg</string>
    <string name="str_tools_wind_speed_value">6 m/s</string>
    <string name="str_tools_wind_gust_value">9 m/s</string>
    <string name="str_tools_wind_dir_value">SW</string>
    <string name="str_tools_uvi_value">3</string>
    <string name="str_tools_date_day_forecast">Sun, Sept. 11</string>

</resources>