<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="88dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:background="@drawable/hourly_item_selected_bg"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_hourly_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:text="@string/str_tools_date_hour_forecast"
        tools:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_hourly_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:text="@string/str_tools_hour"
        tools:textColor="@color/black" />

    <ImageView
        android:id="@+id/iv_hourly_weather"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/str_weather_ic_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_test_small_3d" />

    <TextView
        android:id="@+id/tv_hourly_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:text="@string/str_tools_temperature"
        tools:textColor="@color/black" />

</LinearLayout>