<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_location"
        tools:listitem="@layout/item_location" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:queryHint="@string/str_location_search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_location"
        app:searchIcon="@drawable/ic_search" />

    <TextView
        android:id="@+id/tv_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/str_current_location"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_location_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_location"
        tools:text="@string/str_tools_location_name"
        tools:textColor="@color/black" />

    <ImageView
        android:id="@+id/iv_earth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/str_earth_desc"
        android:src="@drawable/earth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location_name" />

    <TextView
        android:id="@+id/tv_search_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/str_search_location"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_earth"
        tools:textColor="@color/black" />

    <ImageView
        android:id="@+id/iv_detect_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/str_detect_loc_desc"
        android:src="@drawable/ic_location_detect"
        app:layout_constraintBottom_toBottomOf="@+id/tv_search_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_search_location" />

</androidx.constraintlayout.widget.ConstraintLayout>